--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,39 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
+
+/* .map-container {
+  height: 800px;
+  }
+   
+  .sidebar {
+  background-color: rgba(35, 55, 75, 0.9);
+  color: #fff;
+  padding: 6px 12px;
+  font-family: monospace;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 12px;
+  border-radius: 4px;
+  } */
+
+  body, #root {
+    margin: 0;
+    padding: 0;
+    width: 100vh;
+    height: 100vh;
+  }
+
+  #search{
+    position: absolute;
+    z-index: 99;
+    left: 1rem;
+    top: 1rem;
+    width: 90vw;
+    height: 2rem;
+    font-size: 2rem;
+    padding: 0.3rem;
+  }
